test/apps/errors/src/routes/throw.svelte
<script context="module">
	export function preload() {
		throw new Error('nope');
	}
</script>